@@ -1,3 +1,9 @@
+import org.gradle.api.tasks.compile.JavaCompile
+import org.gradle.api.tasks.javadoc.Javadoc
+import org.gradle.external.javadoc.StandardJavadocDocletOptions
+import org.gradle.external.javadoc.JavadocMemberLevel
+import org.gradle.api.tasks.testing.Test
+
 dependencies {
     implementation(project(":modules:model"))
     implementation(project(":modules:config"))
@@ -7,4 +13,19 @@ dependencies {
     implementation(project(":modules:backend-contract"))
     implementation(project(":modules:trace"))
     implementation(project(":backends:openblas-provider"))
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.addAll(listOf("--add-modules", "jdk.incubator.vector"))
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--add-modules", "jdk.incubator.vector")
+}
+
+tasks.named<Javadoc>("javadoc") {
+    (options as StandardJavadocDocletOptions).apply {
+        memberLevel = JavadocMemberLevel.PACKAGE
+        addStringOption("-add-modules", "jdk.incubator.vector")
+    }
 }
